--- a/config/config.toml
+++ b/config/config.toml
@@ -5,7 +5,7 @@
 # Available languages:
 # it - Italian, by https://github.com/Steffo99
 # en - English, by https://github.com/DarrenWestwood
-# uk - Ukrainian, by https://github.com/pzhuk
+# uk - Ukrainian, by https://github.com/pzhuk and https://github.com/Trentyn
 # ru - Russian, by https://github.com/pzhuk
 # zh_cn - Simplified Chinese, by https://github.com/zhihuiyuze
 # he - Hebrew, by https://github.com/netanelkoli
@@ -14,7 +14,7 @@
 # The lanugages that messages can be displayed in
 enabled_languages = ["it", "en", "uk", "ru", "zh_cn", "he", "es_mx", "pt_br"]
 # The default language to be set for users whose language cannot be autodetected or whose language is not enabled
-default_language = "it"
+default_language = "en"
 # The language to fallback to if a string is missing in a specific language
 # You should set it to either "it" or "en", other languages may be missing some strings as greed is updated
 fallback_language = "en"
@@ -24,6 +24,7 @@ fallback_language = "en"
 [Database]
 # The database engine you want to use.
 # Refer to http://docs.sqlalchemy.org/en/latest/core/engines.html for the possible settings.
+# This value is ignored if you're running greed via Docker, or if the DB_ENGINE environment variable is set.
 engine = "sqlite:///database.sqlite"
 
 
@@ -47,20 +48,29 @@ con_pool_size = 10
 # General payment settings
 [Payments]
 # ISO currency code
-currency = "EUR"
+currency = "USD"
 # Currency exp parameter. You can find that on https://core.telegram.org/bots/payments/currencies.json.
 # It has a value of 2 in most currencies (EUR, USD, GBP...)
 currency_exp = 2
 # Currency symbol which is show to the client users when displaying prices and transaction values
 # If not defined here, default language specific currency symbol from strings would be used
-currency_symbol = "€"
+currency_symbol = "$"
+
+
+# Cash payment settings
+[Payments.Cash]
+# Display the "With cash" option in the Add Credit menu
+enable_pay_with_cash = false
+# Display the "Create transaction" option in the Manager menu
+enable_create_transaction = false
+# Customize the cash payment text in the strings files!
 
 
 # Credit card payment settings
 [Payments.CreditCard]
 # Telegram Payments provider token obtainable at https://t.me/BotFather in the bot's Payments menu
 # If empty, credit card payments are disabled.
-# credit_card_token =
+# credit_card_token = ""
 credit_card_token = "123456789:YOUR_TOKEN_HERE_"
 # Minimum wallet payment accepted (in miniumum currency units, $1.00 = 100 units)
 min_amount = 1000
@@ -98,7 +108,7 @@ phone_required = true
 # The full order information includes the order number and the timestamp of the order placement
 full_order_info = false
 # Allow balance refill during the order checkout in case of unsufficient balance
-refill_on_checkout = false
+refill_on_checkout = true
 # Display welcome message (conversation_after_start) when the user sends /start
 display_welcome_message = true
 
@@ -111,9 +121,3 @@ format = "{asctime} | {threadName} | {name} | {message}"
 # Logging level: ignore all log entries with a level lower than the specified one
 # Valid options are FATAL, ERROR, WARNING, INFO, and DEBUG
 level = "INFO"
-
-# Bitcoin payment settings
-[Bitcoin]
-# Blockonomics API key
-api_key = "BLOCKONOMICS_API_KEY"
-secret = "YOUR_SECRET"
